# mobile_manipulator

./: README.md  repo.md
arduino_code/to_arduino/: to_arduino.ino
ommp_packages/ommp_lisa2_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ommp_packages/ommp_lisa_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ommp_packages/ommp_lisa_moveit_config/config/: ommp_sim.srdf  ros_controllers.yaml  ros_controllers1.yaml
ommp_packages/ommp_lisa_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ommp_sim_moveit_controller_manager.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  prova.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
ommp_packages/ommp_nogripper_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
par_computado/: CMakeLists.txt  controller_plugins.xml  package.xml
par_computado/action/: MyMsg.action
par_computado/msg/: tau.msg
par_computado/src/: PI.cpp  PI_funciona.cpp  backup.cpp  par_comp_vel.cpp  par_computado (another copy).cpp  par_computado (copy).cpp  par_computado.cpp  par_computado_backup.cpp  par_computado_contador.cpp  par_computado_vel.cpp
pure_pursuit/: package.xml
pure_pursuit/cfg/: PurePursuit.cfg
pure_pursuit/src/: pure_pursuit.cpp
pure_pursuit2/cfg/: PurePursuit.cfg
(+62 files in other folders)
